bad/for_bool_over_null.example_compiler_output
ERROR
[1mbad/for_bool_over_null.lat:3:19: [1;31merror: [0;1mfor cannot iterate over value of non-array type `null`[m
	for (boolean x : null) {}
	                 [1;32m^[m
